Update install instructions

--- a/Notebooks/RIM-Test-2D-Gaussians.ipynb
+++ b/Notebooks/RIM-Test-2D-Gaussians.ipynb
@@ -341,6 +341,25 @@
       "Training epoch: 4::  Completion: 80.00%  ETA 00:01:26  loss: 9.166E-02  MSE: 8.206E-02\n",
       "Training epoch: 4::  Completion: 85.71%  ETA 00:00:44  loss: 7.964E-02  MSE: 8.157E-02\n",
       "Training epoch: 4::  Completion: 91.43%  ETA 00:00:28  loss: 8.176E-02  MSE: 8.108E-02\n",
+      "Training epoch: 4::  Completion: 97.14%  ETA 00:00:12  loss: 7.758E-02  MSE: 8.057E-02\n",
+      "Validation epoch: 4::  Completion: 0.00%  ETA: 00:01:20  train_loss: 7.595E-02  train_MSE: 8.049E-02  val_loss: 8.673E-02 val_MSE: 8.673E-02\n",
+      "Validation epoch: 4::  Completion: 5.71%  ETA: 00:01:17  train_loss: 7.595E-02  train_MSE: 8.049E-02  val_loss: 7.112E-02 val_MSE: 8.198E-02\n",
+      "Validation epoch: 4::  Completion: 11.43%  ETA: 00:01:20  train_loss: 7.595E-02  train_MSE: 8.049E-02  val_loss: 7.227E-02 val_MSE: 8.034E-02\n",
+      "Validation epoch: 4::  Completion: 17.14%  ETA: 00:01:06  train_loss: 7.595E-02  train_MSE: 8.049E-02  val_loss: 7.980E-02 val_MSE: 7.942E-02\n",
+      "Validation epoch: 4::  Completion: 22.86%  ETA: 00:01:05  train_loss: 7.595E-02  train_MSE: 8.049E-02  val_loss: 8.819E-02 val_MSE: 7.908E-02\n",
+      "Validation epoch: 4::  Completion: 100.00%  ETA: 0  train_loss: 7.595E-02  train_MSE: 8.049E-02  val_loss: 7.677E-02 val_MSE: 7.899E-02\n",
+      "\n",
+      "Training MSE: 0.0805\n",
+      "Validation MSE: 0.0790\n",
+      "Time taken on epoch: 00:06:09 seconds \n",
+      "\n",
+      "\n",
+      "Training epoch: 5::  Completion: 0.00%  ETA 00:05:45  loss: 8.690E-02  MSE: 8.170E-02\n",
+      "Training epoch: 5::  Completion: 5.71%  ETA 00:05:31  loss: 8.821E-02  MSE: 7.872E-02\n",
+      "Training epoch: 5::  Completion: 11.43%  ETA 00:04:21  loss: 9.348E-02  MSE: 7.657E-02\n",
+      "Training epoch: 5::  Completion: 17.14%  ETA 00:05:43  loss: 9.191E-02  MSE: 7.982E-02\n",
+      "Training epoch: 5::  Completion: 22.86%  ETA 00:05:17  loss: 8.666E-02  MSE: 7.833E-02\n",
+      "Training epoch: 5::  Completion: 28.57%  ETA 00:03:57  loss: 7.740E-02  MSE: 7.665E-02\n",
       "\r"
      ]
     }
