--- a/Notebooks/RIM-Test-2D-Gaussians.ipynb
+++ b/Notebooks/RIM-Test-2D-Gaussians.ipynb
@@ -360,6 +360,10 @@
       "Training epoch: 5::  Completion: 17.14%  ETA 00:05:43  loss: 9.191E-02  MSE: 7.982E-02\n",
       "Training epoch: 5::  Completion: 22.86%  ETA 00:05:17  loss: 8.666E-02  MSE: 7.833E-02\n",
       "Training epoch: 5::  Completion: 28.57%  ETA 00:03:57  loss: 7.740E-02  MSE: 7.665E-02\n",
+      "Training epoch: 5::  Completion: 34.29%  ETA 00:03:38  loss: 8.372E-02  MSE: 7.622E-02\n",
+      "Training epoch: 5::  Completion: 40.00%  ETA 00:03:25  loss: 7.372E-02  MSE: 7.499E-02\n",
+      "Training epoch: 5::  Completion: 45.71%  ETA 00:03:16  loss: 7.416E-02  MSE: 7.467E-02\n",
+      "Training epoch: 5::  Completion: 51.43%  ETA 00:03:39  loss: 6.872E-02  MSE: 7.367E-02\n",
       "\r"
      ]
     }
