Updates to analysis tools

--- a/GalaxyCluster/CheckData.ipynb
+++ b/GalaxyCluster/CheckData.ipynb
@@ -21,24 +21,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Path to rmfs (A)\n",
-    "#responses_data = pickle.load(open('../../RIM_data/rmfs_new.pkl', 'rb'))\n",
+    "responses_data = pickle.load(open('/home/carterrhea/Downloads/rmfs_520.pkl', 'rb'))\n",
     "# Path to observed spectra (y)\n",
-    "spectra_data = pickle.load(open('/home/carterrhea/Downloads/spectra_new.pkl', 'rb'))\n",
+    "#spectra_data = pickle.load(open('/home/carterrhea/Downloads/spectra_new.pkl', 'rb'))\n",
     "# Path to true spectra (x)\n",
-    "true_spectra_data = pickle.load(open('/home/carterrhea/Downloads/true_new.pkl', 'rb'))\n",
+    "#true_spectra_data = pickle.load(open('/home/carterrhea/Downloads/true_new.pkl', 'rb'))\n",
     "# These values are defined for this specific problem\n",
     "min_ = 35\n",
     "max_ = 175\n",
     "# Read in A, x, and y\n",
-    "spectra_x = [data[1][0][0][min_:max_] for data in spectra_data.items()]\n",
-    "spectra_y = [data[1][0][1][min_:max_] for data in spectra_data.items()]\n",
-    "true_spectra_y = [data[1] for data in true_spectra_data.items()]\n",
-    "spectra_response = [data[1][1] for data in spectra_data.items()]\n",
+    "#spectra_x = [data[1][0][0][min_:max_] for data in spectra_data.items()]\n",
+    "#spectra_y = [data[1][0][1][min_:max_] for data in spectra_data.items()]\n",
+    "#true_spectra_y = [data[1] for data in true_spectra_data.items()]\n",
+    "#spectra_response = [data[1][1] for data in spectra_data.items()]\n",
+    "responses = [response for response in responses_data]\n",
     "#responses = [responses_data[val][min_:max_,min_:max_] for val in spectra_response]"
    ]
   },
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -123,15 +124,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of all-zero rmfs: 0\n",
-      "Total number of rmfs: 10000\n"
+      "Number of all-zero rmfs: 1\n",
+      "Total number of rmfs: 71\n"
      ]
     }
    ],
